--- a/Lession_III/CMakeLists.txt
+++ b/Lession_III/CMakeLists.txt
@@ -2,4 +2,5 @@ project(Lession_III)
 
 cmake_minimum_required(VERSION 3.12)
 
-add_executable(main main3.cpp)
+add_executable(main main3.cpp main3_3.cpp)
+
